# sigil-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: basic.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs
