[package]
name = "sigil-rs"
version = "0.1.0"
categories = ["graphics", "multimedia::images"]
description = "minimal and fast identicon generator"
edition = "2021"
keywords = ["identicon"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/goto-bus-stop/sigil-rs"

[dependencies]
image = { version = "0.25.2", default-features = false, features = ["png"] }
md-5 = "0.10.6"

[dev-dependencies]
axum = "0.7.7"
indoc = "2.0.5"
